static/css/custom.css
/* ... */
.restyled-garrick .pkg {
  background-color: var(--background);
  color: var(--accent-dark);
  border: 1px solid var(--accent-dark);
  border-radius: 3px;
  box-shadow: none;
}

.restyled-garrick .pkg a {
  color: var(--accent-dark);
  padding: 0 3px !important;
  height: 100%;
  width: 100%;
  background: rgba(44, 132, 117, 0.15);
  margin-left: -3px;
  margin-right: -3px;
}

.restyled-garrick .pkg a:hover,
.restyled-garrick .pkg a:focus {
  color: var(--red);
}

.restyled-garrick p code,
.restyled-garrick li code {
  color: var(--red);
  font-size: 0.925em;
  background: none;
}

.restyled-garrick p a code {
  color: var(--red);
  text-decoration: underline;
}

.restyled-garrick .caption {
  color: var(--text-light);
}

.restyled-garrick .hamburger-inner,
.restyled-garrick .hamburger-inner::before,
.restyled-garrick .hamburger-inner::after {
  background-color: var(--primary-light);
}

.restyled-garrick .hamburger-inner.is-active,
.restyled-garrick .hamburger-inner.is-active::before,
.restyled-garrick .hamburger-inner.is-active::after {
  background-color: var(--primary-light);
}

.restyled-garrick .sidebar .sidebar-nav {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
}

.restyled-garrick .sidebar .sidebar-nav > * {
  min-width: 150px;
  margin-bottom: 1em;
}

.restyled-garrick .sidebar-nav a,
.restyled-garrick .sidebar-nav a:hover {
  color: var(--accent-dark);
}

@media screen and (min-width: 48em) {
  .restyled-garrick .sidebar .sidebar-nav {
    justify-content: left;
  }
  .restyled-garrick .sidebar .sidebar-nav > * {
    min-width: 100px;
    margin-bottom: 0;
  }
}

@media screen and (max-width: 767px) {
  .restyled-garrick .sidebar .sidebar-nav > * {
    margin-bottom: 0;
  }
}

/* WARNING: The following work for .restyled-garrick and may need to be revisted */
@media screen and (min-width: 48em) and (max-width: 64em) {
  .restyled-garrick .content:not(.expanded) {
    margin-left: 16rem;
  }
  .restyled-garrick .sidebar {
    max-width: 16rem;
  }
}

.restyled-garrick .archive-item {
  position: relative;
  text-indent: -1em;
  margin-left: 1em;
  margin-bottom: 0.66em;
  padding-right: 4em;
  line-height: 1.25;
}

.restyled-garrick .archive-item time {
  position: absolute;
  top: 0;
  right: 0;
  color: var(--text-darkish);
}

.restyled-garrick td, .restyled-garrick th {
  border-color: var(--text-lightest)
}

.restyled-garrick tbody tr:nth-child(2n+1) td, 
.restyled-garrick tbody tr:nth-child(2n+1) th {
  background-color: var(--text-lightest)
}

.restyled-garrick .talk-table td, 
.restyled-garrick .talk-table th {
  border: none;
}

.restyled-garrick .talk-table tbody tr:nth-child(2n+1) td, 
.restyled-garrick .talk-table tbody tr:nth-child(2n+1) th {
  background: var(--background);
}

.restyled-garrick .hljs-keyword, .restyled-garrick .hljs-selector-tag, .restyled-garrick .hljs-subst {
  color: var(--text-darkish);
}

.restyled-garrick .hljs-string, .restyled-garrick .hljs-doctag {
  color: var(--primary-light);
}

.restyled-garrick .hljs-title, .restyled-garrick .hljs-section, .restyled-garrick .hljs-selector-id {
  color: var(--red);
  font-weight: bold;
}

.restyled-garrick .hljs-symbol, .restyled-garrick .hljs-bullet {
  color: var(--purple);
}

.restyled-garrick .hljs-tag, .restyled-garrick .hljs-name, .restyled-garrick .hljs-attribute {
  color: var(--primary-accent);
  font-weight: normal;
}

/* ---- DARK MODE !!!! ---- */
@media (prefers-color-scheme: dark) {
  :root {
    --background: #202020;
    --primary-dark: #eaeaea;
    --primary-light: #887ba3;
    --text-dark: #9a9a9a;
    --text-light: #424242;
    --text-lightest: #303030;
    --text-darkish: #bbb;
  }
  
  .restyled-garrick .caption {
    color: var(--text-mild);
  }
  
  .restyled-garrick p code, .restyled-garrick li code {
    color: var(--orange);
  }
    
  pre code, pre, code {
    background: var(--text-lightest);
  }
  
  pre.r {
    border-color: #646464;
  }
  
  pre.r + pre,
  pre.r + pre > code {
    background: var(--text-lightest);
  }
  
  .hljs {
    color: var(--text-dark);
    background: var(--text-lightest);
  }
  
  hr {
    border-color: var(--text-mild);
  }
  
  blockquote {
    border-left-color: var(--text-mild);
    color: var(--text-dark);
  }
  
  /* Dim Images Except on Hover */
  img {
    opacity: .5;
    transition: opacity .5s ease-in-out;
  }
  img:hover {
    opacity: 1;
  }
  
  .featherlight.featherlight .featherlight-content {
    background: var(--background);
  }
  
  .featherlight.featherlight .featherlight-close-icon {
    background: var(--background);
    color: var(--text-dark);
  }
}

